Small refactoring based on SonarLint.